Add ANBI status to footer

--- a/_includes/theme-footer.liquid
+++ b/_includes/theme-footer.liquid
@@ -31,7 +31,6 @@
     </ul>
   </section>
   <section>
-    <p>Foundation for Public Code vereniging (met volledige rechtsbevoegdheid) <a href="https://about.publiccode.net/organization/governance-model.html" title="Governance model">is a member owned association</a> registered under <a href="https://www.kvk.nl/orderstraat/product-kiezen/?kvknummer=74996452" title="KVK registration">chamber of commerce (KvK) registration 74996452</a> and with identification number (RSIN) 860102294.</p>
-  </section>
+    <p>Foundation for Public Code vereniging (met volledige rechtsbevoegdheid) <a href="https://about.publiccode.net/organization/governance-model.html" title="Governance model">is a member owned association</a> registered under <a href="https://www.kvk.nl/orderstraat/product-kiezen/?kvknummer=74996452" title="KVK registration">chamber of commerce (KvK) registration 74996452</a> and with identification number (RSIN) 860102294. We're recognized as a <a href="https://www.belastingdienst.nl/wps/wcm/connect/bldcontenten/belastingdienst/business/other_subjects/public_benefit_organisations/" title="public benefit organization (ANBI)">public benefit organization (ANBI)</a> by the Dutch Tax and Customs Administration.</p>  </section>
 </footer>
 {% endif %}
