--- a/_includes/header.liquid
+++ b/_includes/header.liquid
@@ -4,4 +4,13 @@
       <a href="{{ site.url }}">{{ site.title }}</a>
     </section>
   {% endif %}
+
+  {% if site.show_navigation == true %}
+
+    <nav id="site-nav">
+      <input type="checkbox" id="show-site-nav"></input><label for="show-site-nav">site menu</label>
+      {% include navigation.liquid context="/" %}
+    </nav>
+
+  {% endif %}
 </header>
