GitHub search icon on button and styling

--- a/_includes/footer.liquid
+++ b/_includes/footer.liquid
@@ -12,7 +12,7 @@
 
       <form id="search-repository" action="{{ site.github.repository_url }}/search" method="GET">
         <input name="q" type="text" placeholder="Search source on GitHub">
-        <button type="Submit">Search</button>
+        <button type="Submit">{% include github-search.svg %} Search</button>
       </form>
 
     </section>
