--- a/_includes/theme-footer.liquid
+++ b/_includes/theme-footer.liquid
@@ -13,7 +13,7 @@
     <p>More on <a href="https://projects.publiccode.net">projects.publiccode.net</a></p>
   </section>
   <section>
-    <h3><a href="https://publiccode.net/careers/">Careers</a></h3>
+    <h3><a href="https://publiccode.net/who-we-are/careers/">Careers</a></h3>
     <p>Calling all publicly minded open source people! Join our staff.</p>
     <p><a href="https://publiccode.net/careers/">About working with us and open positions</a></p>
   </section>
