--- a/_includes/footer.liquid
+++ b/_includes/footer.liquid
@@ -1,5 +1,6 @@
 <footer id="site-footer">
-  <!-- GitHub repository information -->{% if site.github %}
+  <!-- GitHub repository information -->
+  {% if site.github %}
     <section>
       <h3>This site on GitHub</h3>
       <p>This site was last published {{ site.time | date_to_long_string }} from the <a href="{{ site.github.repository_url }}">{{ site.github.repository_nwo }}</a> repository on GitHub.</p>
