Updated footer look and content, and added footer-specific CSS

--- a/_includes/theme-footer.liquid
+++ b/_includes/theme-footer.liquid
@@ -1,35 +1,70 @@
 {% if site.hide_foundation_footer != true %}
 <footer id="foundation-footer">
-  <section>
-    <h3>
-    <a href="https://about.publiccode.net">About us</a>
-    </h3>
-    <p>Together, we’re growing an ecosystem of open public-purpose software and policy.</p>
-    <p>More on <a href="https://about.publiccode.net">about.publiccode.net</a></p>
-  </section>
-  <section>
-    <h3><a href="https://projects.publiccode.net">Our projects</a></h3>
-    <p>Open products we're researching or developing to further our mission.</p>
-    <p>More on <a href="https://projects.publiccode.net">projects.publiccode.net</a></p>
-  </section>
-  <section>
-    <h3><a href="https://publiccode.net/careers/">Careers</a></h3>
-    <p>Calling all publicly minded open source people! Join our staff.</p>
-    <p><a href="https://publiccode.net/careers/">About working with us and open positions</a></p>
-  </section>
-  <section>
-    <h3><a href="https://about.publiccode.net/organization/contact-details.html">Contact</a></h3>
-    <ul>
-      <li>Join our <a href="https://forms.gle/gn7wR2Eaxbv5g1BF9">mailing list</a>
-      <li>Phone: <a href="tel:+31202444500">+31 20 2 444 500</a>
-      <li>Email: <a href="mailto:info@publiccode.net">info@publiccode.net</a></li>
-      <li>Address:
-      <address>
-        Keizersgracht 617, 1017 DS, Amsterdam, the Netherlands
-      </address></li>
-    </ul>
-  </section>
-  <section>
-    <p>Foundation for Public Code vereniging (met volledige rechtsbevoegdheid) <a href="https://about.publiccode.net/organization/governance-model.html" title="Governance model">is a member owned association</a> registered under <a href="https://www.kvk.nl/orderstraat/product-kiezen/?kvknummer=74996452" title="KVK registration">chamber of commerce (KvK) registration 74996452</a> and with identification number (RSIN) 860102294. We're recognized as a <a href="https://www.belastingdienst.nl/wps/wcm/connect/bldcontenten/belastingdienst/business/business-public-benefit-organisations/public_benefit_organisations/what_is_pbo/what_is_a_pbo" title="public benefit organization (ANBI)">public benefit organization (ANBI)</a> by the Dutch Tax and Customs Administration.</p>  </section>
+
+  <div class="footer-trio">
+    <section>
+      <div class="footer-section-content">
+        <h2>How-to</h2>
+        <p>All of our staff information, decision-making rules and processes. Our staff manual is developed collaboratively with the community and can be reused by everyone.</p>
+        <p>Read more about our activities, organization, and the glossary of terms and concepts.</p>
+      </div>
+      <div class="footer-links">
+        <a href="https://about.publiccode.net">Get meta</a>
+      </div>
+    </section>
+    <section>
+      <div class="footer-section-content">
+        <h2>Project resources</h2>
+        <p>Open products we're researching or developing to further our mission. We rely on these resources for our everyday work. You can, too!</p>
+      </div>
+      <div class="footer-links">
+        <a href="https://projects.publiccode.net">Free to use and modify</a>
+        <a href="https://github.com/publiccodenet">See all our work on Github</a>
+      </div>
+    </section>
+    <section>
+      <div class="footer-section-content">
+        <h2>Careers</h2>
+        <p>Calling all publicly minded open source people! Find out about working with us, and join our staff.</p>
+      </div>
+      <div class="footer-links">
+        <a href="https://publiccode.net/careers/">Open positions</a>
+      </div>
+    </section>
+  </div>
+
+  <div class="footer-duo">
+    <section class="footer-contact">
+      <h2>Contact</h2>
+      <dl>
+          <dt>Newsletter:</dt>
+          <dd><a href="https://forms.gle/gn7wR2Eaxbv5g1BF9">Join our mailing list</a></dd>
+
+          <dt>Phone:</dt>
+          <dd><a href="tel:+31202444500">+31 20 2 444 500</a></dd>
+
+          <dt>Email:</dt>
+          <dd><a href="mailto:info@publiccode.net">info@publiccode.net</a></dd>
+
+          <dt>Address:</dt>
+          <dd><address>Keizersgracht 617, 1017 DS, Amsterdam, the Netherlands</address>
+          <a href="https://www.openstreetmap.org/node/2736377676" title="OpenStreetMap">OpenStreetMap</a> | <a href="https://www.google.com/maps/place/Keizersgracht+617,+1017+DS+Amsterdam,+Netherlands" title="Google Maps">Google</a>
+        </dd>
+
+          <dt>Twitter:</dt>
+          <dd><a href="https://twitter.com/publiccodenet">@publiccodenet</a></dd>
+      </dl>
+    </section>
+
+    <section class="footer-notes">
+      <h2>Organizational notes</h2>
+      <p>Foundation for Public Code vereniging (met volledige rechtsbevoegdheid) <a href="https://about.publiccode.net/organization/governance-model.html" title="Governance model">is a member owned association</a> registered under <a href="https://www.kvk.nl/orderstraat/product-kiezen/?kvknummer=74996452" title="KVK registration">chamber of commerce (KvK) registration 74996452</a> and with identification number (RSIN) 860102294.</p>
+      <p>We're recognized as a <a href="https://www.belastingdienst.nl/wps/wcm/connect/bldcontenten/belastingdienst/business/business-public-benefit-organisations/public_benefit_organisations/what_is_pbo/what_is_a_pbo" title="public benefit organization (ANBI)">public benefit organization (ANBI)</a> by the Dutch Tax and Customs Administration.</p>
+      <p class="footer-last-updated">Last updated {{ site.time | date_to_long_string }}</p>
+      <p class="footer-copyright">2020 <a href="https://publiccode.net">Foundation for Public Code</a></p>
+      <p class="footer-license"><a href="https://creativecommons.org/publicdomain/zero/1.0/" title="Creative Commons Zero v1.0 Universal">Creative Commons Zero v1.0 Universal</a></p>
+    </section>
+  </div>
+
 </footer>
 {% endif %}
