Reverting 'How-to' title to 'About us' (temporarily, at least)

--- a/_includes/theme-footer.liquid
+++ b/_includes/theme-footer.liquid
@@ -4,7 +4,7 @@
   <div class="footer-trio">
     <section>
       <div class="footer-section-content">
-        <h2>How-to</h2>
+        <h2>About us</h2>
         <p>All of our staff information, decision-making rules and processes. Our staff manual is developed collaboratively with the community and can be reused by everyone.</p>
         <p>Read more about our activities, organization, and the glossary of terms and concepts.</p>
       </div>
