--- a/_includes/theme-footer.liquid
+++ b/_includes/theme-footer.liquid
@@ -59,7 +59,7 @@
       <p>We're recognized as a <a href="https://www.belastingdienst.nl/wps/wcm/connect/bldcontenten/belastingdienst/business/business-public-benefit-organisations/public_benefit_organisations/what_is_pbo/what_is_a_pbo" title="public benefit organization (ANBI)">public benefit organization (ANBI)</a> by the Dutch Tax and Customs Administration.</p>
       <div class="footer-note-cluster"></div>
         <p class="footer-last-updated">Last updated {{ site.time | date_to_long_string }}</p>
-        <p class="footer-copyright">2020 <a href="https://publiccode.net">Foundation for Public Code</a></p>
+        <p class="footer-copyright">{{ 'now' | date: "%Y" }} <a href="https://publiccode.net">Foundation for Public Code</a></p>
       </div>
     </section>
   </div>
