Splitting nav mirroring into header (w/ nav) and footer (just logo)

--- a/_layouts/theme.liquid
+++ b/_layouts/theme.liquid
@@ -6,10 +6,10 @@
   <body class="{% if page.toc != false and site.toc == true or page.toc == true %}with-toc{% endif %} {% if site.show_navigation == true %}with-site-nav{% endif %}">
 
     {% include theme-nav.liquid %}
-        
+
     {{ content }}
 
-    {% include theme-nav.liquid %}
+    {% include theme-footer-logo.liquid %}
 
     {% include theme-footer.liquid %}
 
