Include javascript in head section of theme to test open source and GDPR compliant web analytics tool (issue #64)

--- a/_includes/head.liquid
+++ b/_includes/head.liquid
@@ -16,4 +16,5 @@
   {% endif %}
 
   <link rel="icon" href="https://brand.publiccode.net/logo/mark-128w128h.png">
+  <script async defer data-domain="publiccode.net" src="https://plausible.io/js/plausible.js"></script>
 </head>
