Update link to signup form
Addresses publiccodenet/about#813

--- a/_includes/theme-footer.liquid
+++ b/_includes/theme-footer.liquid
@@ -38,7 +38,7 @@
       <h2>Contact</h2>
       <dl>
           <dt>Newsletter:</dt>
-          <dd><a href="https://forms.gle/gn7wR2Eaxbv5g1BF9">Join our mailing list</a></dd>
+          <dd><a href="https://odoo.publiccode.net/survey/start/594b9243-c7e5-4bc1-8714-35137c971842">Join our mailing list</a></dd>
 
           <dt>Phone:</dt>
           <dd><a href="tel:+31202444500">+31 20 2 444 500</a></dd>
