--- a/_includes/footer.liquid
+++ b/_includes/footer.liquid
@@ -21,7 +21,7 @@
           <a href="{{ latestRelease.tarball_url }}" download><code>.tar.gz</code></a>
         </li>
       </ul>
-      {% if site.include_badges = true %}
+      {% if site.include_badges %}
       {% include badges.html %}
       {% endif %}
     </section>
