Add ANBI info to theme-footer

--- a/_includes/theme-footer.liquid
+++ b/_includes/theme-footer.liquid
@@ -56,7 +56,7 @@
     <section class="footer-notes">
       <h2>Organizational notes</h2>
       <p>Foundation for Public Code vereniging (met volledige rechtsbevoegdheid) <a href="https://about.publiccode.net/organization/governance-model.html" title="Governance model">is a member owned association</a> registered under <a href="https://www.kvk.nl/orderstraat/product-kiezen/?kvknummer=74996452" title="KVK registration">chamber of commerce (KvK) registration 74996452</a> and with identification number (RSIN) 860102294.</p>
-      <p>We're recognized as a <a href="https://www.belastingdienst.nl/wps/wcm/connect/bldcontenten/belastingdienst/business/business-public-benefit-organisations/public_benefit_organisations/what_is_pbo/what_is_a_pbo" title="public benefit organization (ANBI)">public benefit organization (ANBI)</a> by the Dutch Tax and Customs Administration.</p>
+      <p>We're recognized as a <a href="https://www.belastingdienst.nl/wps/wcm/connect/bldcontenten/belastingdienst/business/business-public-benefit-organisations/public_benefit_organisations/what_is_pbo/what_is_a_pbo" title="public benefit organization (ANBI)">public benefit organization (ANBI)</a> by the Dutch Tax and Customs Administration. <a href="https://about.publiccode.net/organization/" title="See our ANBI information.">See our ANBI information.</a> </p>
       <div class="footer-note-cluster"></div>
         <p class="footer-last-updated">Last updated {{ site.time | date_to_long_string }}</p>
         <p class="footer-copyright">{{ 'now' | date: "%Y" }} <a href="https://publiccode.net">Foundation for Public Code</a></p>
