Add prev-next navigation if show_prev_next: true
Pages must be part of a list which have an 'order' attribute.
A link will be created to the page with an 'order' attribute of 1
less than the current page 'order', if such a page is in the list.
Also a link will be created to the page which has an order of 1
greater, if it exists.

--- a/assets/style.css
+++ b/assets/style.css
@@ -448,6 +448,18 @@ input#show-site-nav:checked ~ ul {
     flex-basis: 100%;
     order: 0;
   }
+  main .theme-prev-next {
+    flex-basis: 100%;
+    order: 0;
+  }
+  main .theme-prev-next-prev {
+    float:left;
+    margin-right: 5px;
+  }
+  main .theme-prev-next-next {
+    float:right;
+    margin-left: 5px;
+  }
   main>h1 {
     flex-basis: 100%;
     margin: 0;
