--- a/_layouts/single-page.liquid
+++ b/_layouts/single-page.liquid
@@ -4,6 +4,10 @@ layout: site
 
 <main>
 
+   {% if page.show_prev_next %}
+      {% include prev_next.liquid %}
+   {% endif %}
+
   {% if site.show_breadcrumbs %}
     {% include breadcrumbs.liquid %}
   {% endif %}
