Add holder for translations snippet
Fixes #88

--- a/_includes/footer.liquid
+++ b/_includes/footer.liquid
@@ -24,6 +24,9 @@
       {% if site.include_badges %}
       {% include badges.html %}
       {% endif %}
+      {% if site.include_translations %}
+      {% include translations.html %}
+      {% endif %}
     </section>
   {% endif %}
 
