Add link to all releases
Fixes #90

--- a/_includes/footer.liquid
+++ b/_includes/footer.liquid
@@ -15,6 +15,9 @@
           </li>
         {% endfor %}
         <li>
+            <a href="{{ site.github.repository_url }}/releases">All releases</a>
+        </li>
+        <li>
           Source archive in 
           <a href="{{ latestRelease.zipball_url }}" download><code>.zip</code></a>
           or
