--- a/_includes/metadata.liquid
+++ b/_includes/metadata.liquid
@@ -1,6 +1,6 @@
 {% capture currentDate %}{{ site.time | date: '%F' }}{% endcapture %}
 {% capture date %}{{ page.expires | date: '%F' }}{% endcapture %}
-
+{% assign author = site.data.authors[page.author] %}
 {% if page.type %}
   <h2 id="page-metadata">This {{ page.type | downcase }}</h2>
 {% endif %}
@@ -10,7 +10,7 @@
     {% if page.date %}<tr><td>Date:</td><td>{{ page.date | date: '%-d %B %Y' }}</td></tr>{% endif %}
     {% if page.explains %}<tr><td>Explains:</td><td class="explains">{{page.explains}}</td></tr>{% endif %}
     {% if page.audience %}<tr><td>Audience:</td><td class="audience">{{page.audience}}</td></tr>{% endif %}
-    {% if page.author %}<tr><td>Author:</td><td class="author">{{page.author}}</td></tr>{% endif %}
+    {% if page.author %}<tr><td>Author:</td><td class="author">{{author.name}}</td></tr>{% endif %}
     {% if page.expires %}<tr class="{% if date < currentDate %}expired{% else %}not-expired{% endif %}"><td>Expires:</td><td class="expires">{{ page.expires | date: "%-d %B %Y" }} ({{page.expires}})</ttd></td>{% endif %}
   </table>
 {% endif %}
