Add rel=license on license links in the footer
Fixes #87

--- a/_includes/footer.liquid
+++ b/_includes/footer.liquid
@@ -71,7 +71,7 @@
               {% assign license_file = true %}
           {% endif %}
         {% endfor %}
-        {% if license_file %}<a href="{{ site.baseurl }}/LICENSE.html">{% endif %}
+        {% if license_file %}<a href="{{ site.baseurl }}/LICENSE.html" rel="license">{% endif %}
         {{ site.license.name | default: site.github.license.name }}
         {% if license_file %}</a>{% endif %}
       </p>
